<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:animateLayoutChanges="true"
    android:animationCache="true"
    android:background="@drawable/pozadina"
    tools:context="com.example.sonicextreme.capsdown.FirstActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opis"
        android:textColor="@color/crna"
        android:id="@+id/opis" />


    <EditText
        android:layout_below="@id/opis"
        android:inputType="text"
        android:height="@dimen/inputSize"
        android:scrollbars="vertical"
        android:lines="2"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/komentar"
        android:paddingLeft="@dimen/cbpadding"
        android:paddingRight="@dimen/cbpadding"
        android:hint="@string/savet"
        android:textColorHint="@color/disabled"/>

    <ImageView
        android:id="@+id/slika"
        android:layout_below="@id/input"
        android:radius="10dp"
        android:src="@drawable/capstast"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_below="@id/slika"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

<RelativeLayout
            android:id="@+id/dugmici"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <RadioGroup
                android:id="@+id/radio_grupa"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/lower_case"
                    android:text="@string/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/upper_case"
                    android:text="@string/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/toogle_case"
                    android:text="@string/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>


    <CheckBox
                android:id="@+id/paragraf"
                android:text="@string/paragraf"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@id/radio_grupa"
        android:layout_alignLeft="@id/radio_grupa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    <CheckBox
                android:id="@+id/recenice"
                android:layout_below="@id/paragraf"
                android:text="@string/sentence_caps"
        android:layout_alignLeft="@id/radio_grupa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/poruka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/slika"
        android:text="@string/poruka"
        android:textColor="@color/crna"
        android:textSize="30dp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/dugme"
        android:layout_below="@id/poruka"
        android:text="@string/ButtonProcess"
        android:background="@drawable/moje_dugme"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:paddingLeft="@dimen/cbpadding"
        android:paddingStart="@dimen/cbpadding"
        android:paddingRight="@dimen/cbpadding"
        android:paddingEnd="@dimen/cbpadding"
        android:layout_height="wrap_content" />

</RelativeLayout>
