<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:animateLayoutChanges="true"
    android:background="@drawable/pozadina">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="@dimen/inputSize"
        android:paddingLeft="@dimen/cbpadding"
        android:paddingRight="@dimen/cbpadding"
        android:id="@+id/output"

        android:background="@drawable/komentar"
        android:scrollbars = "vertical"
        android:textIsSelectable="true"/>

    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/dugmeNazad"
        android:text="@string/nazad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/output"
        android:layout_centerHorizontal="true"
        android:background="@drawable/moje_dugme"/>

    <TextView
        android:layout_below="@id/dugmeNazad"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/opis2"
        android:textColor="@color/crna"
        android:id="@+id/opis"/>

    <ImageView
        android:id="@+id/slika"
        android:layout_below="@id/opis"
        android:radius="10dp"

        android:src="@drawable/capstast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_centerVertical="true"
        android:layout_below="@id/slika"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/poruka2"
        android:textColor="@color/crna"
        android:textSize="36px"
        android:textStyle="bold"/>


</RelativeLayout>